--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -54,7 +54,7 @@
 .weather-card {
     padding: 15px;
     border-radius: 10px;
-    background: #f9f9f9;
+    background: #c0b9b9;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: 10px;
 }
