--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app-container {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
