--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -1,5 +1,5 @@
 .weather-container {
-    width: 450px;
+    width: 1280px;
     margin: 20px auto;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -150,5 +150,38 @@
 
 .default-bg {
     background: linear-gradient(to right, #ff9a9e, #fad0c4);
+}
+
+.forecast-container {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.forecast-cards {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    background: #c0b9b9;
+    border-radius: 10px;
+    padding: 20px;
+    flex-wrap: wrap;
+}
+
+.forecast-card {
+    background: rgba(255, 255, 255, 0.1);
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+    width: 150px;
+    height: 200px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.forecast-card img {
+    width: 100px;
+}
+
+.forecast-card p {
+    margin: 5px 0;
 }
 
