Changed default background

--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -149,7 +149,7 @@
 }
 
 .default-bg {
-    background: linear-gradient(to right, #ff9a9e, #fad0c4);
+    background: transparent;
 }
 
 .forecast-container {
