--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .app-container {
   width: 100vw;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,6 +37,6 @@
 }
 
 .default-bg {
-  background: linear-gradient(to right, #ff9a9e, #fad0c4);
+  background: transparent;
   color: black;
 }
